--- a/angular.json
+++ b/angular.json
@@ -24,10 +24,12 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.css"
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+	      "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
             ],
             "scripts": ["node_modules/jquery/dist/jquery.js",
-              "node_modules/bootstrap/dist/js/bootstrap.js"],
+              "node_modules/bootstrap/dist/js/bootstrap.js",
+		"node_modules/@fortawesome/fontawesome-free/js/all.min.js"],
             "es5BrowserSupport": true
           },
           "configurations": {
